--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "@urql/exchange-graphcache": "^4.4.3",
+    "date-fns": "^2.29.1",
     "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
     "next": "12.2.2",
